--- a/src/App.css
+++ b/src/App.css
@@ -4,27 +4,65 @@
   box-sizing: border-box;
 }
 
-.App,
-h1,
-h2,
-h3 {
-  font-family: "Poppins", sans-serif;
+.App {
+  font-family: "DM Sans", sans-serif;
 }
 
-.Header {
-  margin-top: 2em;
+.Banner p,
+.Banner h1,
+.Banner span {
+  color: white;
+}
+
+.Banner span {
+  font-size: 2em;
+}
+
+.Banner h1 {
+  margin-bottom: 0.2em;
+}
+
+.Nav {
+  height: 3em;
+}
+
+.Banner .Content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 5em);
+}
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 2px solid red;
 }
 
 form {
   display: flex;
-  gap: 1em;
-  width: 80%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  border: 2px solid orange;
 }
 
-.TextInput {
-  flex: 3;
+input.TextInput {
+  width: 30rem;
 }
 
-.Submit {
-  flex: 1;
+input.Submit {
+  width: 15rem;
+}
+
+.BannerContainer {
+  border: 2px solid yellow;
+}
+
+.ResortDisplayResults {
+  height: 100vh;
+  width: 100vw;
 }
