--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/*** GLOBAL ***/
 .App {
   font-family: "DM Sans", sans-serif;
 }
 
+/*** NAV ***/
+.Nav {
+  height: 3em;
+}
+
+/*** BANNER ***/
 .Banner p,
 .Banner h1,
 .Banner span {
@@ -22,10 +28,6 @@
   margin-bottom: 0.2em;
 }
 
-.Nav {
-  height: 3em;
-}
-
 .Banner .Content {
   display: flex;
   justify-content: center;
@@ -33,6 +35,7 @@
   height: calc(100vh - 5em);
 }
 
+/*** FORM ***/
 .Form {
   display: flex;
   flex-direction: column;
@@ -56,10 +59,7 @@ input.Submit {
   width: 15rem;
 }
 
-.BannerContainer {
-  border: 2px solid yellow;
-}
-
+/*** RESORT DISPLAY ***/
 .ResortDisplayResults {
   height: 100vh;
   width: 100vw;
