--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@ form {
 }
 
 input.TextInput {
-  width: 30rem;
+  width: 20rem;
 }
 
 input.Submit {
@@ -165,6 +165,50 @@ input.Submit {
 
 /*** RESORT DISPLAY ***/
 .ResortDisplayResults {
-  height: 100vh;
+  height: auto;
   width: 100vw;
+}
+
+.ResortHeader {
+  border: 2px solid red;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.ResortHeader h2 {
+  padding: 0;
+  margin: 0;
+}
+
+.ResortDisplayResults .Results {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+
+.ChairStatus table {
+  width: 16em;
+  height: 1em;
+  border: 2px solid violet;
+}
+
+.ChairStatus table td {
+  font-size: small;
+  padding: 3px 5px;
+  margin: 0;
+}
+
+.LiftStatistics ul {
+  border: 2px solid green;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.LiftStatistics ul li {
+  font-size: smaller;
+  list-style-type: none;
 }
