--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 /*** GLOBAL ***/
 .App {
+  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+}
+
+.App {
+  font-family: "Poppins", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 {
   font-family: "DM Sans", sans-serif;
 }
 
@@ -64,9 +76,37 @@
   filter: grayscale(0);
 }
 
-.About footer {
-  display: flex;
-  justify-content: space-between;
+/*** ACCOUNT ***/
+
+.Account dialog {
+  background-image: url("src/assets/images/03.jpeg");
+  background-position: center center;
+  background-size: cover;
+}
+
+.Account form {
+  padding: 0.5em 4em;
+}
+
+.Account form #email {
+  width: 12rem;
+}
+
+.Account form button {
+  width: 6em;
+}
+
+.Account header {
+  margin-bottom: 1em;
+}
+
+.Account header h3 {
+  margin-bottom: 0;
+}
+
+.Account article,
+.Account header {
+  background-color: transparent;
 }
 
 /*** FAVORITES ***/
@@ -92,6 +132,11 @@
 }
 
 /*** BANNER ***/
+
+.Banner {
+  margin-bottom: 3em;
+}
+
 .Banner p,
 .Banner h1,
 .Banner span,
@@ -99,7 +144,8 @@
   color: white;
 }
 
-.Banner span {
+.Banner span,
+.ResortDisplay span {
   font-size: 2.5em;
 }
 
@@ -146,7 +192,7 @@ span.vert-move {
   justify-content: center;
 }
 
-form {
+.Form form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -156,21 +202,23 @@ form {
 }
 
 input.TextInput {
-  width: 20rem;
-}
-
-input.Submit {
   width: 15rem;
 }
 
+input.Submit {
+  width: 10rem;
+}
+
 /*** RESORT DISPLAY ***/
+.ResortDisplay {
+  margin-top: 3em;
+}
 .ResortDisplayResults {
   height: auto;
   width: 100vw;
 }
 
 .ResortHeader {
-  border: 2px solid red;
   padding: 1em;
   display: flex;
   flex-direction: column;
@@ -183,16 +231,47 @@ input.Submit {
   margin: 0;
 }
 
+.SnowTotals {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 0.5em;
+  flex-wrap: wrap;
+}
+
+.SnowTotals ul {
+  display: flex;
+  font-size: smaller;
+  padding: 0;
+  margin: 0;
+}
+
+.SnowTotals ul li {
+  list-style-type: none;
+}
+
 .ResortDisplayResults .Results {
   display: flex;
   flex-direction: row;
-  gap: 1em;
+  gap: 2em;
+  padding: 0 2em;
+  flex-wrap: wrap;
 }
 
 .ChairStatus table {
   width: 16em;
   height: 1em;
-  border: 2px solid violet;
+}
+
+.ChairStatus {
+  flex: 1;
+}
+
+.ForecastBox {
+  flex: 2;
+}
+
+details[open] > summary:not([role]):not(:focus) {
+  color: inherit;
 }
 
 .ChairStatus table td {
@@ -202,13 +281,86 @@ input.Submit {
 }
 
 .LiftStatistics ul {
-  border: 2px solid green;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  gap: 0.5em;
+  flex-wrap: wrap;
+}
+
+article.LiftStatistics,
+article.SnowTotals {
+  padding: 0.5em 0;
+  margin: 0.5em 0;
 }
 
 .LiftStatistics ul li {
   font-size: smaller;
   list-style-type: none;
+}
+
+.ResortDisplayResults details {
+  border-bottom: none;
+}
+
+.EachDay {
+  justify-content: space-between;
+}
+
+summary.EachDay {
+  font-size: large;
+  padding-bottom: 1.5em;
+}
+
+.ForecastContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 2em 0;
+  gap: 0.5em;
+  flex-wrap: wrap;
+}
+
+table td,
+table th {
+  color: var(--h3-color);
+}
+
+.ForecastContainer article {
+  margin: 0;
+}
+
+.ForecastContainer table td {
+  font-size: small;
+  padding: 3px 5px;
+  margin: 0;
+}
+
+#ResortDisplayResults > div > section > table > thead > tr > th {
+  font-size: smaller;
+  padding: 0.4em;
+}
+
+details summary::after {
+  background-image: url("https://cdn4.iconfinder.com/data/icons/christmas-2434/128/Artboard_2-256.png");
+}
+
+.ResortDisplay article {
+  background-color: transparent;
+}
+
+.ResortDisplay .Results article:hover {
+  background-color: #fcf9f4;
+}
+
+.ResortDisplay span {
+  color: #455d7a;
+}
+
+.BackToTopDiv {
+  width: 100vw;
+  height: 3em;
+  display: flex;
+  justify-content: center;
 }
