--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,12 @@ h4 {
   height: 3em;
 }
 
+.Logo {
+  margin-top: 1.5em;
+  width: 5em;
+  height: auto;
+}
+
 /*** ABOUT ***/
 
 .About dialog {
@@ -70,6 +76,7 @@ dialog article .close {
   justify-content: space-between;
   align-items: center;
   gap: 0.9em;
+  flex-wrap: wrap;
 }
 
 .AboutText {
@@ -269,19 +276,18 @@ input.Submit {
   flex-wrap: wrap;
 }
 
-.ChairStatus table {
-  width: 16em;
-  height: 1em;
-}
-
 .ChairStatus {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  /* flex: 1; */
 }
 
 .ForecastBox {
   flex: 2;
+}
+
+.ForecastBox h3 {
+  padding-left: 0.6em;
 }
 
 details[open] > summary:not([role]):not(:focus) {
@@ -330,10 +336,11 @@ summary.EachDay {
 
 .ForecastContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 2em 0;
-  gap: 0.5em;
+  gap: 1em;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 table td,
