--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,9 @@ input.Submit {
 .ResortDisplayResults {
   height: auto;
   width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .ResortDisplay h2,
@@ -305,6 +308,18 @@ h3 {
 h4 {
   padding: 0.2em 0;
   margin: 0;
+}
+
+.StatsMessage {
+  display: flex;
+  justify-content: center;
+}
+
+.StatsMessage p {
+  margin: 0;
+  padding: 0;
+  font-size: smaller;
+  color: var(--h1-color);
 }
 
 .SnowTotals {
@@ -450,6 +465,7 @@ details summary::after {
 
 .ResortDisplay article {
   background-color: transparent;
+
   transition: background-color 0.5s;
 }
 
